--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">MarvelCharcaters</string>
+    <string name="app_name">Marvel Characters</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Search_Hint">Search for a character...</string>
+    <string name="description_title">Description</string>
+
+
+
 </resources>
