--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Search_Hint">Search for a character...</string>
     <string name="description_title">Description</string>
+    <string name="description_not_available">I can\'t describe myself :)</string>
+
 
 
 
