--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="Search_Hint">Search for a character...</string>
     <string name="description_title">Description</string>
     <string name="description_not_available">I can\'t describe myself :)</string>
+    <string name="error_message_Network">You have a trouble in your connection :(</string>
+    <string name="error_message_Request">Something doesn\'t working fine :(</string>
+
 
 
 
