--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Marvel Characters</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Search_Hint">Search for a character...</string>
     <string name="description_title">Description</string>
     <string name="description_not_available">I can\'t describe myself :)</string>
@@ -9,5 +7,8 @@
     <string name="error_message_Request">Something doesn\'t working fine :(</string>
     <string name="error_message_network_lost">Sorry bad news, You lost your connection :(</string>
 
-
+    <string name="stories_title">Stories</string>
+    <string name="series_title">Series</string>
+    <string name="events_title">Events</string>
+    <string name="comics_title">Comics</string>
 </resources>
